# oodles

./: .gitignore  Cargo.toml  README.md
src/: basequal0.rs  main.rs
tests/: p.bam  test.sh
