[package]
name = "oodles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.2.1", features=["derive", "env"]}
noodles = {version = "0.35.0", features = ["bam", "cram", "core", "sam", "bgzf"]}
noodles-bam = {features=["async"]}
noodles-bgzf = {version = "0.20.0", features=["async", "libdeflate"]}

[[bin]]
name = "oodles"
